[project]
name = "email-triage-env"
version = "1.0.0"
description = "An RL environment for email triage tasks — labelling, prioritizing, and drafting replies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.7.4",
    "openai>=2.7.2",
    "openenv-core>=0.2.1",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Kama0f1/email-triage-env"
Repository = "https://github.com/Kama0f1/email-triage-env"

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"